[package]
name = "p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
serde_json = "1.0.108"
serde = {version = "1.0.193", features = ["derive"]}
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
reqwest = { version = "0.10", features = ["json"] }
hex = "0.4"
tokio = { version = "0.2.25", features = ["full"] }
dotenv = "0.15.0"
url = "2.2.2"
base64 = "0.13.0"